Deixando o código limpo no header

--- a/pages/paginaInicial/index.html
+++ b/pages/paginaInicial/index.html
@@ -11,8 +11,10 @@
 
 <body>
     <header>
-        <p>Flagle</p>
-        <a href="#">Ranking</a>
+        <h1 id="logo">Flagle</h1>
+        <nav id="navigation">
+            <a href="#">Ranking</a>
+        </nav>
     </header>
 </body>
 
