Visual do jogo criado

--- a/pages/paginaInicial/index.html
+++ b/pages/paginaInicial/index.html
@@ -16,6 +16,14 @@
             <a href="#">Ranking</a>
         </nav>
     </header>
+    <main>
+        <section id="game">
+        <h3 id="title">Guess the flag!</h3>
+        <img id="flag" src="../../assets/flag.png" alt="Brazil">
+        <input id="inputGuess"type="text">
+        </section>
+
+    </main>
 </body>
 
 </html>
