Footer criado e estilizado

--- a/pages/paginaInicial/index.html
+++ b/pages/paginaInicial/index.html
@@ -22,8 +22,10 @@
         <img id="flag" src="../../assets/flag.png" alt="Brazil">
         <input id="inputGuess"type="text">
         </section>
-
     </main>
+    <footer>
+        <a href="https://github.com/JoaoVitorWinter/">GitHub</a>
+    </footer>
 
     <script type="text/javascript" src="index.js"></script>
 </body>
