Ranking criado e populado

--- a/pages/ranking/ranking.html
+++ b/pages/ranking/ranking.html
@@ -14,11 +14,44 @@
             <a href="#">Ranking</a>
         </nav>
     </header>
-
     <main>
-        <table>
-            
+        <table id="ranking">
+            <tr>
+                <th>
+                    Nome
+                </th>
+                <th>
+                    Pontos
+                </th>
+            </tr>
+            <tr>
+                <td>
+                    Chettus
+                </td>
+                <td>
+                    9
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Badiuor
+                </td>
+                <td>
+                    4
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    GbMitico
+                </td>
+                <td>
+                    2
+                </td>
+            </tr>
         </table>
     </main>
+    <footer>
+        <a href="https://github.com/JoaoVitorWinter/">GitHub</a>
+    </footer>
 </body>
 </html>
