--- a/pages/paginaInicial/index.html
+++ b/pages/paginaInicial/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1 id="logo">Flagle</h1>
         <nav id="navigation">
-            <a href="#">Ranking</a>
+            <a href="../ranking/ranking.html">Ranking</a>
         </nav>
     </header>
     <main>
