--- a/pages/ranking/ranking.html
+++ b/pages/ranking/ranking.html
@@ -11,7 +11,7 @@
     <header>
         <h1 id="logo">Flagle</h1>
         <nav id="navigation">
-            <a href="#">Ranking</a>
+            <a href="../paginaInicial/index.html">Ranking</a>
         </nav>
     </header>
     <main>
